# kiwix-chat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.sh  release.yml
src/: config.rs  main.rs
src/agent/: mod.rs  run.rs  tools.rs
src/kiwix/: client.rs  mod.rs  parse.rs
src/llm/: client.rs  mod.rs  types.rs
src/tui/: app.rs  mod.rs  ui.rs
